fix(how-it-works): Change font size on mobile

--- a/frontend/css/how-it-works.css
+++ b/frontend/css/how-it-works.css
@@ -141,7 +141,7 @@
   }
 
   .hiw-body {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
   }
 }
 
@@ -151,7 +151,7 @@
   }
 
   .hiw-body {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
   }
 
   .hiw-cta {
